@@ -1,5 +1,5 @@
 export(asEuclidean, asHomogeneous, aspect3d, axes3d, axis3d, box3d,
-        bbox3d, bg3d, clear3d, cube3d, dot3d,
+        bbox3d, bg3d, clear3d, cube3d, dot3d, ellipse3d,
 	identityMatrix,
 	light3d, lines3d, material3d, mtext3d, 
 	oh3d, open3d, par3d, particles3d, persp3d, plot3d, points3d, pop3d,
@@ -26,6 +26,11 @@ export(asEuclidean, asHomogeneous, aspect3d, axes3d, axis3d, box3d,
  S3method(translate3d, default)
  S3method(rotate3d, default)
  S3method(scale3d, default)
+ 
+ S3method(ellipse3d, default)
+ S3method(ellipse3d, lm)
+ S3method(ellipse3d, glm)
+ S3method(ellipse3d, nls)
  
  S3method(plot3d, default)
  S3method(persp3d, default)
